Fix width of search bar on Firefox

--- a/app/res/sass/pages/general.scss
+++ b/app/res/sass/pages/general.scss
@@ -205,6 +205,7 @@ button {
   width: 100%;
   height: 36px;
   .form-group {
+    width: 100%;
     margin-bottom: 0;
     display:inline-block;
     .input-group {
